# tetris-ai

./: .gitignore  CMakeLists.txt  README.md
src/: AIStrategy.h  CMakeLists.txt  DecisionTreeNode.cpp  DecisionTreeNode.h  DellacherieHeuristic.cpp  DellacherieHeuristic.h  GameSequence.cpp  GameSequence.h  GameState.cpp  GameState.h  GameStateNode.cpp  GameStateNode.h  GameStatusView.cpp  GameStatusView.h  Grid.cpp  Grid.h  GridTools.cpp  GridTools.h  GridView.cpp  GridView.h  Heuristic.cpp  Heuristic.h  HeuristicStrategy.cpp  HeuristicStrategy.h  MoveResult.h  Polyomino.cpp  Polyomino.h  PolyominoNode.cpp  PolyominoNode.h  PolyominoState.cpp  PolyominoState.h  Utilities.cpp  Utilities.h  main.cpp
test/: CMakeLists.txt  DecisionTreeNodeTest.cpp  GridTest.cpp  GridToolsTest.cpp  PolyominoStateTest.cpp  PolyominoTest.cpp  UtilitiesTest.cpp  main.cpp
